frontend/src/Login/Login.css
@keyframes bk {
    0% {
      opacity: 1;
    }

    100% {
      opacity: 0;
    }
}

@keyframes popin {
    0% {
        transform: scale(0)
    }
    70% {
        transform: scale(1.1)
    }

    100% {
        transform: scale(1)
    }
  }
@font-face {
    font-family: Arcade;
    src: url(Theaterv04_Bold.ttf);
  }

.accesses-granted{
    margin: 10% 0px 0px 14% ;
}

.login-bg {
    position: fixed;
    z-index: 11;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: #000;
    background-image: url('final_webb_bg.png');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }
  
  .login-box {
    height: 700px;
    width: 850px;
    max-width: 100%;
    padding: 20px;
    color: #000000;
    margin: 6% auto; 
    background-image: url('MOTTAGNINGEN.png') ;
    background-repeat: no-repeat;
    background-size: contain;
    background-origin: border-box;
    font-family: Arcade;
  }

  .login-box h1 {
    font-size: 30px;
    text-align: center;
    margin-top: 60px;
    margin-left: -15%;
    margin-bottom: 2%;
    visibility: hidden;
  }
  
  
  .login-box label {
    font-size: 30px;
    text-align: left;
    margin-left: 15%;
    margin-top: 20px;
    letter-spacing: 2px;
  }

  .login-fail {
    color: rgb(255, 255, 255);
    border: solid rgb(244, 163, 29) 0.5px;
    background-color: rgba(169, 29, 43, 1);
    text-align: center;
    animation: popin 0.1s forwards;
    margin: 2% 10px 10px 17%;
    padding: 1%;
    width: 400px;
  }

  .login-box label::after {
    font-size: 20px;
    /*animation: bk 1s infinite alternate;*/
  }

  .login-box input[type=text]:focus, .login-box input[type=password]:focus {
      outline-color: #ffffff; 
  }
  
  .login-box input[type=text], .login-box input[type=password] {
      max-width: 80%;
    background-color: rgb(53, 53, 53);
    border: none;
    color: #ffffff;
    font-size: 25px;
    /*margin: 3% 0px;*/
    margin-left: 20%;
    margin-top: 1%;
    border-bottom: solid #ffffff 1px;
  }
  
  .login-box input[type=submit] {
    width: 30%;
    padding: 1.4% 8%;
    background-color: #214231;
    border: none;
    border: none;
    color: #ffffff;
    font-family: Arcade;
    font-size: 25px;
    margin: 10% 10px 10px 30%;
  }

  .login-box-form {
    text-align: left;
    padding: 8% 0px 0px 14%;
  }

  @media screen and (max-width: 650px) { /* FÄRDIG */
    .login-box-form {
      text-align: left;
      padding-top: 5%;
    }
    .login-box h1 {
      font-size: 0px;
    }
    .login-box label {
      font-size: 16px;
      margin-left: 100px;
    }
    .login-box input[type=submit] {
      font-size: 16px;
      width: 25%;
      /*margin-top: 49px;*/
      margin: 49px 15px 10px 30%;
    }
    .login-box input[type=text], .login-box input[type=password]{
      margin: 2% 0;
      margin-left: 75px;
    }
    .login-fail {
      margin: 20px 10px 10px 15px;
    }

  }
 
  @media screen and (max-width: 400px) {
    .login-box {
      margin-top: 30px;
      margin-left: -20px;
    }
  .login-box-form {
    text-align: center;
    padding-top: 0%;
  }
  .login-box h1 {
    font-size: 0px;
  }
  .login-box label {
    text-align: left;
    font-size: 15px;
    margin-left: -10%;
    margin-top: 50px;
  }
  .login-box input[type=submit] {
    font-size: 16px;
    margin-top: 15px;
    margin-left: -10px;
  }
  .login-box input[type=text], .login-box input[type=password]{
    /*margin: 2% 0;*/
    margin-left: -40px;
    text-align: center;
    font-size: 13px;

  }
  .login-fail {
    margin: 20px 10px 10px 15px;
    width: 250px;
  }
  }

  @media screen and (max-width: 320px) {
    .login-box {
      margin-top: 30px;
      margin-left: -40px;
    }
    .login-box input[type=submit] {
      margin-top: 5px;
    }
    .login-box-form {
      text-align: center;
      padding-top: 0%;
    }
    .login-box h1 {
      font-size: 0px;
      margin-top: 37px;
    }
    .login-box label {
      text-align: left;
      font-size: 15px;
        }

    .login-box input[type=text], .login-box input[type=password]{
      font-size: 15px;
    }
    
      }
      
    .login-fail {
        margin: 10px 10px 10px 30px;
        width: 200px;

      }

      @media screen and (max-width: 414px) {
        .login-box {
          margin-top: 30px;
          margin-left: -40px;
        }
        .login-box input[type=submit] {
          margin-top: 10px;
          margin-left: 120px;
        }
        .login-box-form {
          text-align: left;
          padding-top: 0%;
        }
        .login-box h1 {
          font-size: 0px;
          margin-top: 60px;
        }
        .login-box label {
          text-align: left;
          font-size: 25px;
            }
    
        .login-box input[type=text], .login-box input[type=password]{
          font-size: 15px;
        }
        
          }
          
        .login-fail {
            margin: 10px 10px 10px 50px;
            width: 200px;
            
    
          }
      /*
  @media screen and (max-width: 375px) and (min-height: 811px){
    .login-box {
      margin-top: 40%;
    }
    .login-fail {
      margin: 20px 10px 10px 15px;
    }
    }
  
    */

    

